--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 ################################################################################
 
 /MTT/.vs/MTT/v16
+/MTT/MTT.IdentityServer.API/bin/Debug/netcoreapp3.1
+/MTT/MTT.IdentityServer.API/obj
+/MTT/MTT.IdentityServer.Application/obj/Debug/netcoreapp3.1
+/MTT/MTT.IdentityServer.Service/obj
+/MTT/.vs/MTT/DesignTimeBuild
+/MTT/MTT.Application.Presentation.API/bin/Debug/netcoreapp3.1
+/MTT/MTT.Application.Presentation.API/obj
+/MTT/MTT.IdentityServer.Application/bin/Debug/netcoreapp3.1
+/MTT/MTT.IdentityServer.Application/obj
+/MTT/MTT.IdentityServer.Service/bin/Debug/netcoreapp3.1
