--- a/MTT/MTT.IdentityServer.API/MTT.IdentityServer.API.csproj
+++ b/MTT/MTT.IdentityServer.API/MTT.IdentityServer.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -25,6 +25,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MTT.IdentityServer.Infra.CrossCutting.Identity\MTT.IdentityServer.Infra.CrossCutting.Identity.csproj" />
+    <ProjectReference Include="..\MTT.IdentityServer.Infra.CrossCutting\MTT.IdentityServer.Infra.CrossCutting.csproj" />
+    <ProjectReference Include="..\MTT.IdentityServer.Service\MTT.IdentityServer.Service.csproj" />
   </ItemGroup>
 
 </Project>
