--- a/MTT/MTT.IdentityServer.Service/MTT.IdentityServer.Service.csproj
+++ b/MTT/MTT.IdentityServer.Service/MTT.IdentityServer.Service.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup> 
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
     <Folder Include="Services\" />    
+  </ItemGroup> 
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
