--- a/MTT/MTT.Application.Presentation.API/MTT.Application.Presentation.API.csproj
+++ b/MTT/MTT.Application.Presentation.API/MTT.Application.Presentation.API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
