--- a/MTT/MTT.Application.Infra.Repository/MTT.Application.Infra.Repository.csproj
+++ b/MTT/MTT.Application.Infra.Repository/MTT.Application.Infra.Repository.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Migrations\Application\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
