--- a/MTT/MTT.Application.Infra.CrossCutting/MTT.Application.Infra.CrossCutting.csproj
+++ b/MTT/MTT.Application.Infra.CrossCutting/MTT.Application.Infra.CrossCutting.csproj
@@ -1,19 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MTT.Application.AppService\MTT.Application.AppService.csproj" />
     <ProjectReference Include="..\MTT.Application.Domain\MTT.Application.Domain.csproj" />
+    <ProjectReference Include="..\MTT.Application.Infra.Proxy\MTT.Application.Infra.Proxy.csproj" />
     <ProjectReference Include="..\MTT.Application.Infra.Repository\MTT.Application.Infra.Repository.csproj" />
   </ItemGroup>
 
