commit git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,21 @@
 /MTT/MTT.IdentityServer.Application/bin/Debug/netcoreapp3.1
 /MTT/MTT.IdentityServer.Application/obj
 /MTT/MTT.IdentityServer.Service/bin/Debug/netcoreapp3.1
+/MTT/MTT.Application.AppService/bin/Debug/netcoreapp3.1
+/MTT/MTT.Application.AppService/obj/Debug/netcoreapp3.1
+/MTT/MTT.Application.AppService/obj
+/MTT/MTT.Application.Domain/bin/Debug/netcoreapp3.1
+/MTT/MTT.Application.Domain/obj/Debug/netcoreapp3.1
+/MTT/MTT.Application.Domain/obj
+/MTT/MTT.Application.Infra.CrossCutting/bin/Debug/netcoreapp3.1
+/MTT/MTT.Application.Infra.CrossCutting/obj/Debug/netcoreapp3.1
+/MTT/MTT.Application.Infra.CrossCutting/obj
+/MTT/MTT.Application.Infra.Repository/bin/Debug/netcoreapp3.1
+/MTT/MTT.Application.Infra.Repository/obj/Debug/netcoreapp3.1
+/MTT/MTT.Application.Infra.Repository/obj
+/MTT/MTT.IdentityServer.Infra.CrossCutting/bin/Debug/netcoreapp3.1
+/MTT/MTT.IdentityServer.Infra.CrossCutting/obj/Debug/netcoreapp3.1
+/MTT/MTT.IdentityServer.Infra.CrossCutting/obj
+/MTT/MTT.IdentityServer.Infra.CrossCutting.Identity/bin/Debug/netcoreapp3.1
+/MTT/MTT.IdentityServer.Infra.CrossCutting.Identity/obj/Debug/netcoreapp3.1
+/MTT/MTT.IdentityServer.Infra.CrossCutting.Identity/obj
